# Generic-App

./: CMakeLists.txt
src/: CMakeLists.txt
src/hello_c_11/: CMakeLists.txt
src/hello_cxx_11/: CMakeLists.txt
src/hello_cxx_14/: CMakeLists.txt  main.cpp
src/hello_cxx_20/: CMakeLists.txt  main.cpp
